[project]
name = "ansible-tools"
version = "0.3.0"
description = "Keyring integration and local execution wrappers for Ansible"
license = { file = "LICENSE.txt" }
readme = "README.md"
requires-python = ">=3.8"
keywords = ["ansible", "local", "keyring", "tools", "wrapper"]
authors = [{ name = "Lorenzo Villani", email = "lorenzo@villani.me" }]
urls = { Homepage = "https://github.com/lvillani/ansible-tools" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Systems Administration",
]
dependencies = ["keyring>=25.5.0,<26", "passlib>=1.7.4,<2"]

[project.scripts]
ansible-local = "ansibletools.cli.ansible_local:main"
ansible-mkpasswd = "ansibletools.cli.ansible_mkpasswd:main"
ansible-vault-helper = "ansibletools.cli.ansible_vault_helper:main"
vaultify = "ansibletools.cli.vaultify:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
